Move builtin type registration to the `@GenerateBindings`